--- a/glorify/index.html
+++ b/glorify/index.html
@@ -1679,6 +1679,7 @@
               </div>
             </div>
           </div>
+          <div class="blankHXS"></div>
 
           <!-- Arrow -->
           <div class="Grid Grid--full">
@@ -1691,41 +1692,60 @@
             </div>
           </div>
           <!-- Arrow -->
+          <div class="blankHXS"></div>
 
           <div class="element">
             <h3 class="accordion accordionBorderTop noMargin withBg"><strong>Concept test plan</strong>
             </h3>
             <div class="accordion-content">
               <div class="blankHXS"></div>
-              <div class="Grid Grid--gutters Grid--cols-3">
-
+              <div class="Grid Grid--gutters Grid--cols-2">
                 <div class="Grid-cell">
                   <h4> <strong> Objective: </strong> </h4>
-                  <p>To evaluate the viability and user interest in two new features:</p>
                   <ul>
-                    <li>Facilitating a Bible Study Session</li>
-                    <li>Facilitating a Group Prayer Session.</li>
+                    <li><strong> Concept A:</strong> Facilitating a Bible Study Session</li>
+                    <li><strong> Concept B:</strong> Facilitating a Group Prayer Session.</li>
+                  </ul>
+                  <p>To understand which of the two concepts, Concept A or Concept B, provides a more intuitive and
+                    user-friendly experience, especially in relation to the set tasks. </p>
+                  <p>I also want to evaluate which concept is more effective in promoting interactions and connections
+                    among participants.</p>
+                </div>
+                <div class="Grid-cell">
+                  <h4> <strong> Methodology - Moderated tests</strong> </h4>
+
+
+                  <p> <strong> Number of Participants:</strong> 3</p>
+                  <p> <strong> Recruitment of Participants:</strong> Three individuals will be selected, ensuring a mix
+                    of those familiar and unfamiliar with Bible study and group prayer sessions.</p>
+                  <p> <strong> Procedure:</strong> </p>
+                  <ul>
+                    <li class="listCircle">Introduction and briefing of participants about the goal of the testing.
+                    </li>
+                    <li class="listCircle">Participants will engage with each concept and perform the listed tasks.
+                    </li>
+                    <li class="listCircle">Participants will be encouraged to voice out their thoughts and experiences
+                      as they navigate
+                      through the tasks.
+                    </li>
+                    <li class="listCircle">Following the completion of tasks for both concepts, participants will answer
+                      a set of questions.
+                    </li>
                   </ul>
                 </div>
-                <div class="Grid-cell">
-                  <h4> <strong> Method </strong> </h4>
-                  <p>Moderated tests</p>
-                </div>
-                <div class="Grid-cell">
-                  <h4> <strong> Number of Participants: </strong> </h4>
-                  <P>3</P>
-                </div>
+
+
               </div>
               <div class="blankHXS"></div>
             </div>
 
-            <h3 class="accordion accordionBorderBottom noMargin withBg"><strong>Tasks of concept A &#38; B</strong></h3>
+            <h3 class="accordion noMargin withBg"><strong>Tasks of concept A &#38; B</strong></h3>
 
             <div class="accordion-content">
               <div class="blankHXS"></div>
               <div class="Grid Grid--gutters Grid--cols-2">
                 <div class="Grid-cell">
-                  <h3> <strong> Concept A - Facilitating a Bible Study Session </strong> </h3>
+                  <h4> <strong> Concept A - Facilitating a Bible Study Session </strong> </h4>
                   <h4> <strong> Tasks for Participants:</strong> </h4>
                   <ul>
                     <li class="listCircle"> <span class="textDecor GLORIFY">Discover a group prayer</span> that align
@@ -1736,13 +1756,10 @@
                     <li class="listCircle"><span class="textDecor GLORIFY">Foster connections</span> with other
                       fellowships after the group prayer session
                     </li>
-
                   </ul>
-
                 </div>
                 <div class="Grid-cell">
-                  <h3> <strong> Concept B - Facilitating a Group Prayer Session </strong> </h3>
-
+                  <h4> <strong> Concept B - Facilitating a Group Prayer Session </strong> </h4>
                   <h4> <strong> Tasks for Participants:</strong> </h4>
                   <ul>
                     <li class="listCircle"> <span class="textDecor GLORIFY">Discover topics</span> that align with their
@@ -1750,39 +1767,39 @@
                     <li class="listCircle">Find a Bible study session to join</li>
                     <li class="listCircle"><span class="textDecor GLORIFY">Engage in discussions</span> with other
                       fellowships within the room</li>
-                    <li class="listCircle"><span class="textDecor GLORIFY">Foster connections</span>  with other
+                    <li class="listCircle"><span class="textDecor GLORIFY">Foster connections</span> with other
                       fellowships after the Bible study session</li>
-
                   </ul>
-
                 </div>
               </div>
-              <div class="Grid Grid--gutters Grid--cols-2">
-                <div class="Grid-cell">
-                  <h4> <strong> Questions: </strong> </h4>
-                  <ul>
-                    <li class="listCircle">Did the live prayer session feel engaging and meaningful to you? </li>
-                    <li class="listCircle">On a scale of 1-10, how would you rate your overall experience with this
-                      feature?
-                    </li>
+              <div class="blankHXS"></div>
+            </div>
+            <h3 class="accordion accordionBorderBottom noMargin withBg"><strong>Questions for Participants: </strong>
+            </h3>
+            <div class="accordion-content">
+              <div class="blankHXS"></div>
 
-                  </ul>
-                </div>
+
+
+              <div class="Grid Grid--full">
                 <div class="Grid-cell">
-                  <h4> <strong> Questions: </strong> </h4>
                   <ul>
-                    <li class="listCircle">Was the interactive platform beneficial for your study experience? </li>
-                    <li class="listCircle">On a scale of 1-10, how would you rate your overall experience with this
-                      feature?
-                    </li>
+                    <li class="listCircle">Which concept did you find more intuitive and why? </li>
+                    <li class="listCircle">Which set of tasks felt more engaging? </li>
+                    <li class="listCircle">Was there any task that felt unnecessary or redundant in either of the
+                      concepts?</li>
+                    <li class="listCircle">Which concept made you feel more connected to other fellowships? </li>
+                    <li class="listCircle"> How could we improve each concept for a better user experience? </li>
+                    <li class="listCircle"> Which concept would you be more inclined to use regularly? </li>
                   </ul>
                 </div>
               </div>
 
               <div class="blankHXS"></div>
             </div>
-
           </div>
+
+          <div class="blankHS"></div>
 
           <!-- Arrow -->
           <div class="Grid Grid--full">
@@ -1795,54 +1812,66 @@
             </div>
           </div>
           <!-- Arrow -->
+          <div class="blankHXS"></div>
+
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <h3> <strong> Engagement Level: </strong> </h3>
+              </div>
+            </div>
+          </div>
+
           <div class="Grid Grid--gutters Grid--cols-2">
             <div class="Grid-cell">
               <div class="element">
-                <h3> <strong> Concept A - Facilitating a Bible Study Session </strong> </h3>
-
-                <h4> <strong> 1. Discover a Bible Study group that align with their interests </strong> </h4>
-
+                <h4> <strong> Concept A </strong> </h4>
                 <h5> <strong class="Grey800">Participants Successful&#58; </strong>3/3 </h5>
                 <h5> <strong class="Grey800">Common Feedback&#58; </strong>All participants found the interface
-                  intuitive and
-                  appreciated the available topics. </h5>
-
-                <h4> <strong>2. Find a suitable group prayer to participate in </strong> </h4>
-                <h5> <strong>Participants Successful&#58; </strong>3/3 </h5>
-                <h5> <strong>Common Feedback&#58; </strong>All participants found the interface intuitive and
-                  appreciated the available topics. </h5>
-
-                <h4> <strong>3. Engage in prayer with other fellowships within the room </strong> </h4>
-                <h5> <strong>Participants Successful&#58; </strong>3/3 </h5>
-                <h5> <strong>Common Feedback&#58; </strong>All participants found the interface intuitive and
-                  appreciated the available topics. </h5>
-
-                <h4> <strong>4. Establish connections with other fellowships following the group prayer session.
-                  </strong> </h4>
-                <h5> <strong>Participants Successful&#58; </strong>3/3 </h5>
-                <h5> <strong>Common Feedback&#58; </strong>All participants found the interface intuitive and
-                  appreciated the available topics. </h5>
-
+                  intuitive and appreciated the available topics. </h5>
 
               </div>
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <h3> <strong> Concept B - Facilitating a Group Prayer Session </strong> </h3>
-                <p>This concept involves integrating a <span class="textDecor GLORIFY">Bible study</span> session
-                  into the existing Christian single-player
-                  app, aiming to <span class="textDecor GLORIFY">facilitate meaningful connections</span> among users
-                  who <span class="textDecor GLORIFY">share similar beliefs and interests</span>
-                  through these study sessions.</p>
-                <p>With the app, users can:</p>
-                <ul>
-                  <li class="listCircle">Create a <span class="textDecor GLORIFY">Bible study room</span> </li>
-                  <li class="listCircle">Discover topics that align with their interests</li>
-                  <li class="listCircle">Find a Bible study session to join</li>
-                  <li class="listCircle">Engage in discussions with other fellowships within the room</li>
-                  <li class="listCircle">Foster connections with other fellowships after the Bible study session</li>
+                <h4> <strong> Concept B </strong> </h4>
+                <h5> <strong class="Grey800">Participants Successful&#58; </strong>3/3 </h5>
+                <h5> <strong class="Grey800">Common Feedback&#58; </strong>All participants found the interface
+                  intuitive and appreciated the available topics. </h5>
 
-                </ul>
+              </div>
+            </div>
+
+          </div>
+          <div class="Grid Grid--gutters Grid--cols-2">
+            <div class="Grid-cell">
+              <div class="element">
+                <h3> <strong> Engagement Level: </strong> </h3>
+
+                <h4>
+                  <strong class="colorGLORIFYOrange">Concept A</strong>
+                </h4>
+
+                <h5> <strong class="Grey800">Participants Successful&#58; </strong>3/3 </h5>
+                <h5> <strong class="Grey800">Common Feedback&#58; </strong>All participants found the interface
+                  intuitive and appreciated the available topics. </h5>
+
+                <h4>
+                  <strong class="colorGLORIFYOrange">Concept B</strong>
+                </h4>
+
+                <h5> <strong class="Grey800">Participants Successful&#58; </strong>3/3 </h5>
+                <h5> <strong class="Grey800">Common Feedback&#58; </strong>All participants found the interface
+                  intuitive and appreciated the available topics. </h5>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <h3> <strong> Connection with Fellowships: </strong> </h3>
+
+                <h5> <strong class="Grey800">Participants Successful&#58; </strong>3/3 </h5>
+                <h5> <strong class="Grey800">Common Feedback&#58; </strong>All participants found the interface
+                  intuitive and appreciated the available topics. </h5>
               </div>
             </div>
           </div>
