--- a/design_system/index.html
+++ b/design_system/index.html
@@ -3238,10 +3238,10 @@
 
             <div class="barGraph  element">
               <div class="widthXS">
-                <div class="barGraphText">User Understanding</div>
-                <div class="barGraphText">Task Success Rate</div>
-                <div class="barGraphText">User Satisfaction:</div>
-                <div class="barGraphText">Error Rate:</div>
+                <div class="barGraphText">Lorem ipsum</div>
+                <div class="barGraphText">Lorem ipsum</div>
+                <div class="barGraphText">Lorem ipsum</div>
+                <div class="barGraphText">Lorem ipsum</div>
               </div>
               <div class="barGraphInner">
                 <article id="bar_graph">
@@ -3280,7 +3280,7 @@
           <div class="Grid-cell">
 
             <div class="RateGraph element">
-              <div class="widthXS">Bla xxxxxx
+              <div class="widthXS">Lorem ipsum
 
               </div>
               <div class="RateGraphInner">
