--- a/design_system/index.html
+++ b/design_system/index.html
@@ -3225,7 +3225,7 @@
         <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
             <div class="element">
-              <h2 class="tArrow">Bar Graph <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+              <h2 class="tArrow">Graph - Bar<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
               </h2>
             </div>
           </div>
@@ -3238,10 +3238,10 @@
 
             <div class="barGraph  element">
               <div class="widthXS">
-                <div class="barGraphText">Lorem ipsum</div>
-                <div class="barGraphText">Lorem ipsum</div>
-                <div class="barGraphText">Lorem ipsum</div>
-                <div class="barGraphText">Lorem ipsum</div>
+                <div class="GraphText">Lorem ipsum</div>
+                <div class="GraphText">Lorem ipsum</div>
+                <div class="GraphText">Lorem ipsum</div>
+                <div class="GraphText">Lorem ipsum</div>
               </div>
               <div class="barGraphInner">
                 <article id="bar_graph">
@@ -3268,7 +3268,7 @@
         <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
             <div class="element">
-              <h2 class="tArrow">Rate <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+              <h2 class="tArrow">Graph - Rate <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
               </h2>
             </div>
           </div>
@@ -3278,14 +3278,11 @@
 
         <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
-
             <div class="RateGraph element">
               <div class="widthXS">Lorem ipsum
-
               </div>
               <div class="RateGraphInner">
                 <article id="RateGraph">
-
                   <div class="RateGrow100">3/1</div>
                   <div class="RateGrow100">3/1</div>
                   <div class="RateGrow0">3/1</div>
@@ -3294,6 +3291,23 @@
             </div>
           </div>
         </div>
+        <div class="Grid Grid--full wrapper">
+          <div class="Grid-cell">
+            <div class="RateGraph element">
+              <div class="widthXS GraphText"> <strong class="Grey800">Lorem ipsum</strong>
+              </div>
+              <div class="RateGraphInner">
+                <article id="RateGraph">
+                  <div class="RateGrow100">1 of 3</div>
+                  <div class="RateGrow100">1 of 3</div>
+                  <div class="RateGrow100">1 of 3</div>
+                </article>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
       </section>
       <section id="content33">
         <div class="wrapper">
