--- a/glorify/index.html
+++ b/glorify/index.html
@@ -1825,66 +1825,211 @@
           <div class="Grid Grid--gutters Grid--cols-2">
             <div class="Grid-cell">
               <div class="element">
-                <h4> <strong> Concept A </strong> </h4>
-                <h5> <strong class="Grey800">Participants Successful&#58; </strong>3/3 </h5>
-                <h5> <strong class="Grey800">Common Feedback&#58; </strong>All participants found the interface
-                  intuitive and appreciated the available topics. </h5>
+                <h4 class="centerVer"> <img class="iconS" src="IconIdea.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange">&#160; Concept A - Bible Study</strong>
+                </h4>
+                <h5 class="centerVer">
+                  <strong class="Grey800">Participants Successful&#58; </strong> &#160; 1/3 &#160;
+
+                  <div class="iconS"><img src="../icon/Profile_Color_Glorify.svg"></div>
+                  <div class="iconS"><img src="../icon/Profile_Grey.svg"></div>
+                  <div class="iconS"><img src="../icon/Profile_Grey.svg"></div>
+                </h5>
+
+
+                <h5> <strong class="Grey800">Common Feedback&#58; </strong>The participant enjoyed the process of
+                  join a Bible study but felt that subsequent tasks required reading an excessive amount of text.
+                </h5>
 
               </div>
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <h4> <strong> Concept B </strong> </h4>
-                <h5> <strong class="Grey800">Participants Successful&#58; </strong>3/3 </h5>
-                <h5> <strong class="Grey800">Common Feedback&#58; </strong>All participants found the interface
-                  intuitive and appreciated the available topics. </h5>
+                <h4 class="centerVer"> <img class="iconS" src="IconIdea.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange">&#160; Concept B - Group Prayer</strong>
+                </h4>
+                <h5 class="centerVer">
+                  <strong class="Grey800">Participants Successful&#58;</strong>&#160; 2/3 &#160;
+                  <div class="iconS"><img src="../icon/Profile_Color_Glorify.svg"></div>
+                  <div class="iconS"><img src="../icon/Profile_Color_Glorify.svg"></div>
+                  <div class="iconS"><img src="../icon/Profile_Grey.svg"></div>
+                </h5>
+                <h5> <strong class="Grey800">Common Feedback&#58; </strong>Those who preferred this concept felt that
+                  discussions within a prayer were more interactive and stimulating than merely engaging in Bible study.
+                  They appreciated the balance between individual discovery and group interaction. </h5>
 
               </div>
             </div>
 
           </div>
-          <div class="Grid Grid--gutters Grid--cols-2">
-            <div class="Grid-cell">
-              <div class="element">
-                <h3> <strong> Engagement Level: </strong> </h3>
 
-                <h4>
-                  <strong class="colorGLORIFYOrange">Concept A</strong>
-                </h4>
-
-                <h5> <strong class="Grey800">Participants Successful&#58; </strong>3/3 </h5>
-                <h5> <strong class="Grey800">Common Feedback&#58; </strong>All participants found the interface
-                  intuitive and appreciated the available topics. </h5>
-
-                <h4>
-                  <strong class="colorGLORIFYOrange">Concept B</strong>
-                </h4>
-
-                <h5> <strong class="Grey800">Participants Successful&#58; </strong>3/3 </h5>
-                <h5> <strong class="Grey800">Common Feedback&#58; </strong>All participants found the interface
-                  intuitive and appreciated the available topics. </h5>
-              </div>
-            </div>
+          <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
                 <h3> <strong> Connection with Fellowships: </strong> </h3>
-
-                <h5> <strong class="Grey800">Participants Successful&#58; </strong>3/3 </h5>
-                <h5> <strong class="Grey800">Common Feedback&#58; </strong>All participants found the interface
-                  intuitive and appreciated the available topics. </h5>
               </div>
             </div>
+          </div>
+          <div class="Grid Grid--gutters Grid--cols-2">
+            <div class="Grid-cell">
+              <div class="element">
+
+                <h4 class="centerVer"> <img class="iconS" src="IconIdea.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange">&#160; Concept A - Bible Study</strong>
+                </h4>
+                <h5 class="centerVer">
+                  <strong class="Grey800">Participants Successful&#58;</strong>&#160; 2/3 &#160;
+
+                  <div class="iconS"><img src="../icon/Profile_Color_Glorify.svg"></div>
+                  <div class="iconS"><img src="../icon/Profile_Color_Glorify.svg"></div>
+                  <div class="iconS"><img src="../icon/Profile_Grey.svg"></div>
+                </h5>
+
+
+                <h5> <strong class="Grey800">Common Feedback&#58; </strong>The participant who felt more connected
+                  mentioned that the Bible study discussion format setting fostered a deep sense of unity and community.
+                  However, others
+                  felt it lacked the interactive aspect that promotes bonding.</h5>
+
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <h4 class="centerVer"> <img class="iconS" src="IconIdea.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange">&#160; Concept B - Group Prayer</strong>
+                </h4>
+                <h5 class="centerVer">
+                  <strong class="Grey800">Participants Successful&#58; 3/3 &#160;</strong>
+
+                  <div class="iconS"><img src="../icon/Profile_Color_Glorify.svg"></div>
+                  <div class="iconS"><img src="../icon/Profile_Color_Glorify.svg"></div>
+                  <div class="iconS"><img src="../icon/Profile_Color_Glorify.svg"></div>
+                </h5>
+                <h5> <strong class="Grey800">Common Feedback&#58; </strong>The participants felt that the group prayer
+                  was conducive to fostering connections as it prompted open interaction, sharing of insights, and
+                  active participation.</h5>
+
+              </div>
+            </div>
+
+          </div>
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <h3> <strong> Confusion/Redundancy: </strong> </h3>
+              </div>
+            </div>
+          </div>
+          <div class="Grid Grid--gutters Grid--cols-2">
+            <div class="Grid-cell">
+              <div class="element">
+
+                <h4 class="centerVer"> <img class="iconS" src="IconIdea.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange">&#160; Concept A - Bible Study</strong>
+                </h4>
+                <h5 class="centerVer">
+                  <strong class="Grey800">Participants Successful&#58; </strong> &#160; 1/3 &#160;
+
+                  <div class="iconS"><img src="../icon/Profile_Color_Glorify.svg"></div>
+                  <div class="iconS"><img src="../icon/Profile_Grey.svg"></div>
+                  <div class="iconS"><img src="../icon/Profile_Grey.svg"></div>
+                </h5>
+
+
+                <h5> <strong class="Grey800">Common Feedback &#58; </strong>The participant who found redundancy felt
+                  that "discovering a Bible study" and "finding a suitable Bible study to participate in" were
+                  overlapping tasks and could be combined for clarity. </h5>
+
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <h4 class="centerVer"> <img class="iconS" src="IconIdea.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange">&#160; Concept B - Group Prayer</strong>
+                </h4>
+                <h5 class="centerVer">
+                  <strong class="Grey800">Participants Successful&#58; </strong> &#160; 1/3 &#160;
+
+                  <div class="iconS"><img src="../icon/Profile_Color_Glorify.svg"></div>
+                  <div class="iconS"><img src="../icon/Profile_Grey.svg"></div>
+                  <div class="iconS"><img src="../icon/Profile_Grey.svg"></div>
+                </h5>
+                <h5> <strong class="Grey800">Common Feedback&#58; </strong>The participant who found redundancy felt
+                  that "discovering a group prayer" and "finding a suitable group prayer to participate in" were
+                  overlapping tasks and could be combined for clarity.</h5>
+
+              </div>
+            </div>
+
+          </div>
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <h3> <strong> Preference for Real-life Usage: </strong> </h3>
+              </div>
+            </div>
+          </div>
+          <div class="Grid Grid--gutters Grid--cols-2">
+            <div class="Grid-cell">
+              <div class="element">
+
+                <h4 class="centerVer"> <img class="iconS" src="IconIdea.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange">&#160; Concept A - Bible Study</strong>
+                </h4>
+                <h5 class="centerVer">
+                  <strong class="Grey800">Participants Successful&#58; </strong> &#160; 1/3 &#160;
+
+                  <div class="iconS"><img src="../icon/Profile_Color_Glorify.svg"></div>
+                  <div class="iconS"><img src="../icon/Profile_Grey.svg"></div>
+                  <div class="iconS"><img src="../icon/Profile_Grey.svg"></div>
+                </h5>
+
+
+                <h5> <strong class="Grey800">Common Feedback&#58; </strong>The participant felt that Concept A provided
+                  a more meditative and reflective environment, which they personally preferred.</h5>
+
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <h4 class="centerVer"> <img class="iconS" src="IconIdea.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange">&#160; Concept B - Group Prayer</strong>
+                </h4>
+                <h5 class="centerVer">
+                  <strong class="Grey800">Participants Successful&#58; </strong>&#160; 2/3 &#160;
+
+                  <div class="iconS"><img src="../icon/Profile_Color_Glorify.svg"></div>
+                  <div class="iconS"><img src="../icon/Profile_Color_Glorify.svg"></div>
+                  <div class="iconS"><img src="../icon/Profile_Grey.svg"></div>
+                </h5>
+                <h5> <strong class="Grey800">Common Feedback&#58; </strong>Those who preferred Concept B felt it catered
+                  to both individual spiritual growth (through topic discovery) and community bonding (through
+                  discussions). They mentioned that this dual benefit made it more appealing for real-life application.
+                </h5>
+
+              </div>
+            </div>
+
           </div>
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
                 <h4> <strong> Conclusion </strong> </h4>
-                <p>That's the end of our session! Thank you for providing your thoughts on these concepts. I
-                  appreciate
-                  your time.</p>
+                <p>In summary, while both concepts have their merits, the feedback indicates that participants value a
+                  balance between <span class="textDecor GLORIFY">personal spiritual growth</span> and <span
+                    class="textDecor GLORIFY">active community interaction</span>. They appreciate clarity in
+                  tasks and a platform that promotes both <span class="textDecor GLORIFY">individual reflection and
+                    group bonding</span>.
+                </p>
               </div>
             </div>
           </div>
+
+
+
+          <div class="blankHS"></div>
+
+
 
           <!-- Arrow -->
           <div class="Grid Grid--full">
@@ -1896,41 +2041,57 @@
             </div>
           </div>
           <!-- Arrow -->
-          </h1>
+          <div class="blankHXS"></div>
+
           <div class="Grid Grid--gutters Grid--cols-3">
             <div class="Grid-cell">
               <div class="element">
-                <h4> <strong> Feedback - Concept A </strong> </h4>
+                <h4> <strong> Concept A - Bible Study</strong> </h4>
+
                 <ul>
-                  <li>The concept is an extension of the existing prayer feature in the app.</li>
-                  <li>In addition to praying together, users may also wish to <span
-                      class="textDecor GLORIFY">communicate while they are waiting</span>.</li>
-                  <li>Perhaps there could be an alternative method for users to interact with other fellowships
-                    without needing to send a formal fellowship request.</li>
+                  <li class="listCircle">The exclusivity of keyboard-based chatting limits the depth and spontaneity of
+                    discussions in the Bible study.
+                  </li>
+                  <li class="listCircle">Focusing solely on a single topic could reduce the diversity of discussions and
+                    engagement levels.
+                  </li>
+                  <li class="listCircle">Prolonged sessions risk users becoming disengaged or distracted from the
+                    primary topic.
+                  </li>
                 </ul>
               </div>
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <h4> <strong> Feedback - Concept B </strong> </h4>
+                <h4> <strong> Concept B - Group Prayer</strong> </h4>
                 <ul>
-                  <li>It becomes quite complex when bible study is restricted to <span
-                      class="textDecor GLORIFY">keyboard-based chatting</span> only.</li>
-                  <li>Discussing only one topic may become monotonous.</li>
-                  <li>Spending too much time in a room can lead to <span class="textDecor GLORIFY">losing focus on the
-                      topic</span>.</li>
+                  <li class="listCircle">This concept builds upon the current prayer feature in the app, expanding its
+                    capabilities.
+                  </li>
+                  <li class="listCircle">While the central focus is prayer, there's an evident desire among users to
+                    chat and connect with each other during the waiting period.
+                  </li>
+                  <li class="listCircle">Consider a streamlined way for users to connect with fellowships, bypassing the
+                    formality of sending individual fellowship requests.
+                  </li>
                 </ul>
+
               </div>
             </div>
             <div class="Grid-cell">
               <div class="element ">
-                <h4> <strong> I'd like to iterate on Concept A (Group prayer) by adding some elements from Concept B
-                    (Chatting before group prayer start).</strong> </h4>
+                <h4> <strong> Iterative Concept B - Enhanced Group Prayer</strong> </h4>
                 <ul>
-                  <li>In the new iteration, users inside the group prayer room have the ability to <span
-                      class="textDecor GLORIFY">chat with each other before the group prayer session begins</span>.</li>
-                  <li>The app will <span class="textDecor GLORIFY">retain the history of group prayers</span>, including
-                    the fellowships who participated in the prayer sessions together. </li>
+                  <li class="listCircle">Merging key feedback from Concept A, we introduce a chat feature within the
+                    Group Prayer room. This allows users to engage in light discussions before transitioning into the
+                    prayer session.
+                  </li>
+                  <li class="listCircle">The application will archive the history of group prayers, creating a record of
+                    fellowships that have prayed together, fostering a sense of community and continuity.
+
+
+
+                  </li>
                 </ul>
               </div>
             </div>
@@ -2632,10 +2793,10 @@
             </div>
             <div class="barGraph element">
               <div>
-                <div class="barGraphText">User Understanding</div>
-                <div class="barGraphText">Task Success Rate</div>
-                <div class="barGraphText">User Satisfaction:</div>
-                <div class="barGraphText">Error Rate:</div>
+                <div class="GraphText">User Understanding</div>
+                <div class="GraphText">Task Success Rate</div>
+                <div class="GraphText">User Satisfaction:</div>
+                <div class="GraphText">Error Rate:</div>
               </div>
               <div class="barGraphInner">
                 <article id="bar_graph">
@@ -3242,8 +3403,8 @@
                   </h4>
                   <div class="barGraph">
                     <div>
-                      <div class="barGraphText">Success Rate</div>
-                      <div class="barGraphText">Directness</div>
+                      <div class="GraphText">Success Rate</div>
+                      <div class="GraphText">Directness</div>
                     </div>
                     <div class="barGraphInner">
                       <article id="bar_graph">
@@ -3656,10 +3817,10 @@
             </div>
             <div class="barGraph element">
               <div>
-                <div class="barGraphText">User Understanding</div>
-                <div class="barGraphText">Task Success Rate</div>
-                <div class="barGraphText">User Satisfaction:</div>
-                <div class="barGraphText">Error Rate:</div>
+                <div class="GraphText">User Understanding</div>
+                <div class="GraphText">Task Success Rate</div>
+                <div class="GraphText">User Satisfaction:</div>
+                <div class="GraphText">Error Rate:</div>
               </div>
               <div class="barGraphInner">
                 <article id="bar_graph">
@@ -4074,10 +4235,10 @@
             </div>
             <div class="barGraph element">
               <div>
-                <div class="barGraphText">User Understanding</div>
-                <div class="barGraphText">Task Success Rate</div>
-                <div class="barGraphText">User Satisfaction:</div>
-                <div class="barGraphText">Error Rate:</div>
+                <div class="GraphText">User Understanding</div>
+                <div class="GraphText">Task Success Rate</div>
+                <div class="GraphText">User Satisfaction:</div>
+                <div class="GraphText">Error Rate:</div>
               </div>
               <div class="barGraphInner">
                 <article id="bar_graph">
