--- a/application_info/index.html
+++ b/application_info/index.html
@@ -248,6 +248,16 @@
       </div>
     </div>
     <div class="containerCopy element">
+      <div class="ClickandCopy">Password</div>
+
+      <div class="copy-text">
+        <input type="text" class="text" value="hazel-print-wrist"/>
+
+        <button class="centerHorz"> <img class="iconS" src="../icon/copyWt.svg" alt="LinkedIn">
+        </button>
+      </div>
+    </div>
+    <div class="containerCopy element">
       <div class="ClickandCopy">Work Samples</div>
 
       <div class="copy-text">
@@ -309,12 +319,27 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-
+          <div class="ClipboardBoxIconOnly">
+            <button class="ClipboardIconOnly" contenteditable="true">
+              <img class="iconMax hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
+                src="../icon/LOGO.svg">
+              <p class="clickIconCopy">https://vickywang.me/
+              </p>
+            </button>
+          </div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
+          <div class="ClipboardBoxIconOnly">
+            <button class="ClipboardIconOnly" contenteditable="true">
+              <img class="iconMax hoverGrey100 paddingXL borderRadiusMax" title="Copy WS to Clipboard"
+                src="../icon/LOGOCircle.svg">
+              <p class="clickIconCopy">https://vickywang.me/worksamples/xiaobaobeeii/
 
+              </p>
+            </button>
+          </div>
         </div>
       </div>
       <div class="Grid-cell">
